# FreshPointSync

./: .gitattributes  .gitignore  .readthedocs.yaml  README.md  README.rst  pyproject.toml  tox.ini
docs/: api_reference.rst  conf.py
docs/source/: api_reference.rst  conf.py  index.rst
docs/source/api/: index.rst
docs/source/intro/: index.rst
docs/source/product/: access_product_data.rst  compare_product_data.rst  index.rst  serialize_product_data.rst
docs/source/product_page/: find_products.rst  index.rst  init_product_page.rst  subscribe_to_updates.rst  update_and_subscribe.rst
docs/source/product_page_hub/: index.rst  init_hub.rst  update_and_subscribe.rst
examles/: analyze_products.py  find_products.py  init_product_page.py  subscribe_to_updates.py
src/: completer.py
src/freshpointsync/: __init__.py  _logging.py
src/freshpointsync/cli/: .history  __init__.py  __parsers.py  _cli.py  _colors.py  _completers.py  _parsers.py  _query_table.py  _settings.py  default_query.json  settings.json
src/freshpointsync/client/: 296.html  __init__.py  _client.py
src/freshpointsync/page/: __init__.py  _page.py
src/freshpointsync/parser/: __init__.py  _parser.py
src/freshpointsync/product/: __init__.py  _product.py
tests/: product_page.html  test_callable_runner.py  test_client.py  test_handler_validator.py  test_page.py  test_product.py  test_product_cache_updater.py  test_product_finder.py  test_product_page_html_parser.py  test_product_update_context.py  test_product_update_event_publisher.py  test_safe_async_task_runner.py
(+4 files in other folders)
