[project]
name = "freshpoint_sync"
version = "0.1.0"
description = "Freshpoint.cz web page data syncer"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  { name = "Konstantin Mykhailov", email = "constantinemykhailov@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "aiohttp",
    "beautifulsoup4",
    "unidecode"
]

[project.urls]
"Homepage" = "https://github.com/mykhakos/FreshPointSync.git"

[options]
package_dir = {"" = "src"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"